# desafio-dev

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-Dev  README.md  pyproject.toml  start_server.sh
docker/: Dockerfile  docker-compose.yml  start_server.sh
fixtures/: transactiontype.yaml
sales/: asgi.py  router.py  settings.py  urls.py  wsgi.py
sales/core/: apps.py  models.py  views.py
sales/customers/: apps.py  models.py  tests.py
sales/customers/api/: router.py  serializer.py  views.py
sales/customers/migrations/: 0001_initial.py
sales/customers/tests/: test_customer.py  test_customer_card.py
sales/reports/: apps.py
sales/reports/api/: router.py  view.py
sales/reports/tests/: test_import_transactions.py
sales/stores/: apps.py  models.py  tests.py
sales/stores/api/: router.py  serializer.py  views.py
sales/stores/migrations/: 0001_initial.py  0002_alter_store_owner.py
sales/stores/tests/: test_store.py  test_store_owner.py
sales/transactions/: apps.py  models.py  tests.py  utils.py
sales/transactions/api/: router.py  serializer.py  view.py
sales/transactions/migrations/: 0001_initial.py
sales/transactions/tests/: test_report_generation.py  test_transaction.py  test_transaction_type.py
